| Bug #26678 | SSL tests fail on win64 | ||
|---|---|---|---|
| Submitted: | 27 Feb 2007 12:27 | Modified: | 13 Mar 2007 20:37 |
| Reporter: | Mads Martin Joergensen | ||
| Status: | Closed | ||
| Category: | Server | Severity: | S2 (Serious) |
| Version: | 5.0 and 5.1 | OS: | Microsoft Windows (windows 64) |
| Assigned to: | Magnus Svensson | Target Version: | |
[27 Feb 2007 12:27]
Mads Martin Joergensen
[27 Feb 2007 14:18]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/20645 ChangeSet@1.2446, 2007-02-27 14:18:12+01:00, msvensson@pilot.blaudden +2 -0 Bug#26678 SSL tests fail on win64 - Import a patch from yaSSL CVS that uses "word" instead of "unsigned long" in three function's that uses sizeof to find out the word size being used. NOTE! long is 32 bit also on 64 bit windows.
[8 Mar 2007 22:31]
Tim Smith
pushed to 5.0.38, 5.1.17
[13 Mar 2007 20:37]
Paul DuBois
Noted in 5.0.38, 5.1.17 changelogs. SSL connections failed on Windows.
