Bug#26678 SSL tests fail on win64  - Import a patch from yaSSL CVS that uses "word" instead of "unsigned long" in three function's that uses sizeof to find out the word size being used. NOTE! long is 32 bit also on 64 bit windows.

extra/yassl/taocrypt/include/misc.hpp:
  Import patch yassl.diff
extra/yassl/taocrypt/src/misc.cpp:
  Import patch yassl.diff